# toybox-rs

./: .gitignore  Cargo.toml  Games.toml  README.md  doc-requirements.txt  mkdocs.yml
.github/workflows/: README.md  build-docs.yml  fmt-check.yml  linux.yml  maturin-publish.yml  rust.yml
bench_games/src/: main.rs
core/: Cargo.toml
core/src/: body2d.rs  direction.rs  features.rs  graphics.rs  input.rs  lib.rs  random.rs
ctoybox/: .gitignore  Cargo.toml  README.md  requirements.txt  test.sh
ctoybox/ctoybox/: __init__.py  ffi.py  human_play.py  input.py  json_schema.py
ctoybox/source/: conf.py  index.rst  input.rst  simulator.rst  state.rst  toybox.rst
ctoybox/source/_templates/: footer.html
ctoybox/src/: core.rs  ffi_result.rs  lib.rs
ctoybox/tests/: test_bad_json.py  test_handcrafted_features.py  test_no_crash.py  test_random_agents.py  test_set_seed.py
docs/: custom.css  dev-tutorial.py  example.ipynb  index.md  input.md  new-game-help.md  simulator.md  state.md  toybox.md
docs/custom_theme/: main.html
newgame/: Cargo.toml
newgame/src/: main.rs
newgame/src/resources/: cargo_deps.txt  lib_template.txt  newgame_template.txt  toybox_lib_template.txt  types_template.txt
py_toybox/: Cargo.toml  README.md  human_play.py
py_toybox/py_toybox/: human_play.py
py_toybox/src/: lib.rs
tb_amidar/: Cargo.toml
tb_amidar/src/: amidar.rs  lib.rs  types.rs
tb_breakout/: Cargo.toml
tb_breakout/src/: breakout.rs  lib.rs  types.rs  vec2d.rs
tb_coffeebot/: Cargo.toml
tb_coffeebot/src/: coffeebot.rs  lib.rs  types.rs
tb_gridworld/: Cargo.toml
tb_gridworld/src/: gridworld.rs  lib.rs  types.rs
tb_pitfall/: Cargo.toml
tb_pitfall/src/: lib.rs  pitfall.rs  sprites.rs  types.rs
tb_pitfall/src/resources/: digits.txt  harry-climb.txt  harry-jump.txt  harry-still.txt  harry-walk.txt  harry.txt  log.txt
tb_pong/: Cargo.toml
tb_pong/src/: font.txt  lib.rs  pong.rs  types.rs
tb_spaceinvaders/: Cargo.toml
tb_spaceinvaders/src/: firing_ai.rs  font.rs  lib.rs  spaceinvaders.rs  types.rs
toybox/: Cargo.toml
toybox/src/: lib.rs
