[package]
name = "ctoybox"
version = "0.2.2"
authors = ["Emma 'Frank' Tosch <etosch@cs.umass.edu>", "John Foley <jjfoley@smith.edu>", "Kaleigh Clary <kclary@cs.umass.edu>"]
readme = "README.md"
description = "Package containing Rust Toybox games."
homepage = "https://github.com/toybox-rs/toybox-rs"
publish = false

[lib]
name = "ctoybox"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
serde = "1"
serde_json = "1"
amidar = {path = "../tb_amidar", version="*"}
breakout = {path = "../tb_breakout", version="*"}
toybox = {path = "../toybox", version="*"}

[dependencies.toybox-core]
version = "*"
path = "../core"

[package.metadata.maturin]
requires-dist = ["pillow", "cffi", "numpy"]
classifier = [
  "Programming Language :: Python :: 3.5",
  "Operating System :: OS Independent",
]
