[package]
name = "amidar"
version = "0.1.0"
authors = ["John Foley <jfoley@cs.umass.edu>"]
edition = "2018"
publish = false

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
lazy_static = "*"
rand = { version = "0.6.3", default-features = false, features=["std"] }
schemars = "0.6"
access-json = "0.1"
inventory = "0.1"

[dependencies.toybox-core]
version = "*"
path = "../core"