[package]
name = "toybox"
version = "0.1.0"
authors = ["John Foley <jfoley@cs.umass.edu>"]
edition = "2018"
publish = false
[dependencies.amidar]
optional = true
path = "../tb_amidar"
version = "*"

[dependencies.breakout]
optional = true
path = "../tb_breakout"
version = "*"

[dependencies.gridworld]
optional = true
path = "../tb_gridworld"
version = "*"

[dependencies.pong]
optional = true
path = "../tb_pong"
version = "*"

[dependencies.spaceinvaders]
optional = true
path = "../tb_spaceinvaders"
version = "*"

[dependencies.toybox-core]
path = "../core"
version = "*"

[features]
default = ["amidar", "breakout", "spaceinvaders", "gridworld", "pong"]
